haciendo el footer de mi sitio web

--- a/pages/torenamusic.html
+++ b/pages/torenamusic.html
@@ -88,7 +88,23 @@
 
     <footer>
 
-        
+        <section class="footer">
+
+            <a href="https://www.instagram.com/ladescokadacumbiaoficial/" target="_blank">
+                <i class="bi bi-instagram"></i>
+            </a>
+
+            <a href="https://www.facebook.com/ladescokadacumbiaoficial?mibextid=LQQJ4d" target="_blank">
+                <i class="bi bi-facebook"></i>
+            </a>
+
+            <a href="https://wa.link/lcdajx" target="_blank">
+                <i class="bi bi-whatsapp"></i>
+            </a>
+
+        </section>
+
+        <p class="copy">© 2023 SIMON-ABRAHAM / LA-DESCOKADA-CUMBIA-todos los derechos reservados</p>
 
     </footer>
 
