--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -38,7 +38,7 @@
                 </li>
     
                 <li>
-                    <a href="../pages/contacto.html">CONTACTO</a>
+                    <a href="../pages/contactos.html">CONTACTO</a>
                 </li>
             </ul>
         </nav>
