--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <nav class="navbar navbar-expand-md ">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img src="../images/logodesko.png" alt="logo"></a>
+                <a class="navbar-brand" href="#"><img src="images/logodesko.png" alt="logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
