--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     </div>
 
                     <div class="carousel-item">
-                        <img src="images/image00004.jpeg" class="d-block w-100" alt="cumbia">
+                        <img src="images/captura3.png" class="d-block w-100" alt="cumbia">
                             <div class="carousel-caption d-none d-md-block">
                                 <p> la descokada </p>
                             </div>
@@ -94,14 +94,14 @@
         <section class="row justify-content-evenly m-4">
             <h2> NUESTROS INICIOS </h2>
             <div class="card col-md-4 m-4">
-                <img src="images/image00003.jpeg" class="card-img-top" alt="laDescokada">
+                <img src="images/captura1.png" class="card-img-top" alt="laDescokada">
                 <div class="card-body">
                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto eligendi unde eum placeat labore nostrum provident, numquam voluptas excepturi error perferendis voluptate suscipit facilis, mollitia, ab obcaecati? Eum culpa vel quos nobis eos! Incidunt, ducimus repellat! Officiis cupiditate, sapiente excepturi eveniet velit expedita accusantium a culpa dolore, veritatis consequuntur labore. Libero reprehenderit numquam dignissimos deleniti impedit, pariatur debitis quisquam delectus beatae fugiat! Magnam dignissimos illo fugiat itaque beatae dicta laudantium maiores eaque, aspernatur velit, suscipit ullam provident esse cum. Voluptatum harum, animi enim, quas, minima minus vitae veniam iusto nulla quidem tempora ipsam doloremque quos officiis voluptatem! Sunt, id provident!</p>
                 </div>
             </div>
 
             <div class="card col-md-4 m-4">
-                <img src="images/image00002.jpeg" class="card-img-top" alt="laDescokada">
+                <img src="images/captura2.png" class="card-img-top" alt="laDescokada">
                 <div class="card-body">
                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed officiis reprehenderit libero tempore, molestias modi. Libero deserunt eum quod error molestias incidunt maxime numquam facilis cupiditate, reprehenderit repellat impedit vel consectetur suscipit culpa. Commodi doloribus omnis molestias obcaecati quis incidunt, dolorum aliquam recusandae consequatur porro distinctio dolores enim est quae.</p>
                 </div>
