poniendo textos reales a mis card, aditando mis imagenes

--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -61,7 +61,7 @@
                 <img src="../images/image00002.jpeg" alt="la descokada cumbia">
             </div>
             <div class="galeria__img d2">
-                <img src="../images/estudio.jpg" alt="la descokada cumbia">
+                <img src="../images/captura4.png" alt="la descokada cumbia">
             </div>
 
             <div class="galeria__img d3">
@@ -73,7 +73,7 @@
             </div>
 
             <div class="galeria__img d5">
-                <img src="../images/image00004.jpeg" alt="la descokada cumbia">
+                <img src="../images/estudio2.jpg" alt="la descokada cumbia">
             </div>
 
             <div class="galeria__img d6">
