--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="images/image00005.jpeg" class="d-block w-100" alt="sonandO EN VIVO">
+                        <img src="images/captura6.jpg" class="d-block w-100" alt="sonandO EN VIVO">
                             <div class="carousel-caption d-none d-md-block">
                                 <p> la descokada </p>
                             </div>
                     </div>
 
                     <div class="carousel-item">
-                        <img src="images/captura3.png" class="d-block w-100" alt="cumbia">
+                        <img src="images/captura7.jpg" class="d-block w-100" alt="cumbia">
                             <div class="carousel-caption d-none d-md-block">
                                 <p> la descokada </p>
                             </div>
@@ -96,14 +96,14 @@
             <div class="card col-md-4 m-4">
                 <img src="images/captura1.png" class="card-img-top" alt="laDescokada">
                 <div class="card-body">
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto eligendi unde eum placeat labore nostrum provident, numquam voluptas excepturi error perferendis voluptate suscipit facilis, mollitia, ab obcaecati? Eum culpa vel quos nobis eos! Incidunt, ducimus repellat! Officiis cupiditate, sapiente excepturi eveniet velit expedita accusantium a culpa dolore, veritatis consequuntur labore. Libero reprehenderit numquam dignissimos deleniti impedit, pariatur debitis quisquam delectus beatae fugiat! Magnam dignissimos illo fugiat itaque beatae dicta laudantium maiores eaque, aspernatur velit, suscipit ullam provident esse cum. Voluptatum harum, animi enim, quas, minima minus vitae veniam iusto nulla quidem tempora ipsam doloremque quos officiis voluptatem! Sunt, id provident!</p>
+                <p class="card-text">Somos una banda compuesta por 5 integrantes, creada en el 2014. Hacemos cumbia del estilo santafesina y colombiana. Somos de Brandsen una ciudad ubicada en la provincia de Buenos Aires, Argentina.</p>
                 </div>
             </div>
 
             <div class="card col-md-4 m-4">
                 <img src="images/captura2.png" class="card-img-top" alt="laDescokada">
                 <div class="card-body">
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed officiis reprehenderit libero tempore, molestias modi. Libero deserunt eum quod error molestias incidunt maxime numquam facilis cupiditate, reprehenderit repellat impedit vel consectetur suscipit culpa. Commodi doloribus omnis molestias obcaecati quis incidunt, dolorum aliquam recusandae consequatur porro distinctio dolores enim est quae.</p>
+                <p class="card-text">Objetivo: que nuestra música llegue a distintas partes del mundo y que se transforme en nuestro único trabajo.</p>
                 </div>
             </div>
         </section>
