--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -58,36 +58,35 @@
         <section class="galeria">
 
             <div class="galeria__img d1">
-                <img src="../images/image00002.jpeg" alt="la descokada cumbia">
+                <img src="../images/captura1.png" alt="LaDescokada show en vivo">
             </div>
             <div class="galeria__img d2">
-                <img src="../images/captura4.png" alt="la descokada cumbia">
+                <img src="../images/captura4.png" alt="LaDescokada show en vivo">
             </div>
 
             <div class="galeria__img d3">
-                <img src="../images/image00003.jpeg" alt="la descokada cumbia">
+                <img src="../images/captura2.png" alt="LaDescokada show en vivo">
             </div>
 
             <div class="galeria__img d4">
-                <img src="../images/enzodesko2.png" alt="la descokada cumbia">
+                <img src="../images/enzodesko2.png" alt="Enzo nuestro tecladista">
             </div>
 
             <div class="galeria__img d5">
-                <img src="../images/estudio2.jpg" alt="la descokada cumbia">
+                <img src="../images/estudio2.jpg" alt="Nuestro Estudio de grabacion">
             </div>
 
             <div class="galeria__img d6">
-                <img src="../images/nachodesko2.png" alt="la descokada cumbia">
+                <img src="../images/nachodesko2.png" alt="Nacho nuestro guitarrista">
             </div>
 
             <div class="galeria__img d7">
-                <img src="../images/nahudesko.png" alt="la descokada cumbia">
+                <img src="../images/nahudesko.png" alt="Nahuel nuestro cantante">
             </div>
 
             <div class="galeria__img d8">
-                <img src="../images/matidesko.png" alt="la descokada cumbia">
+                <img src="../images/matidesko.png" alt="Matias nuestro timbaletero">
             </div>
-
         </section>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
