--- a/pages/torenamusic.html
+++ b/pages/torenamusic.html
@@ -61,32 +61,20 @@
 
         <p class="torenamusic"> "estudio de grabacion oficial de La Descokada Cumbia, abierto a nuevos artistas y nuevos proyectos comunicate con nosotros y vivi una experiencia de grabacion unica"</p>
 
-        <section class="estudio m-5 p-5">
-            <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="../images/estudio.jpg" class="d-block w-100" alt="TorenaMusic estudio">
-                    </div>
-
-                    <div class="carousel-item">
-                        <img src="../images/estudio2.jpg" class="d-block w-100" alt="TorenaMusic estudio">
-                    </div>
-
-                    <div class="carousel-item">
-                        <img src="../images/estudio3.jpg" class="d-block w-100" alt="TorenaMusic estudio">
-                    </div>
-                </div>
-
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
+        <article class="carousell">
+            <div class="descokada">
+                <img src="../images/estudio.jpg" alt="LaDescokada en vivo">
             </div>
-        </section>
+
+            <div class="descokada">
+                <img src="../images/estudio2.jpg" alt="LaDescokada en vivo">
+            </div>
+
+            <div class="descokada">
+                <img src="../images/estudio3.jpg" alt="LaDescokada en vivo">
+            </div>
+
+        </article>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
