acomodando mis imagenes de class carousell, de torena music, modificanso imagenes de mi galeria

--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -58,10 +58,10 @@
         <section class="galeria">
 
             <div class="galeria__img d1">
-                <img src="../images/captura1.png" alt="LaDescokada show en vivo">
+                <img src="../images/estudio.jpg" alt="LaDescokada show en vivo">
             </div>
             <div class="galeria__img d2">
-                <img src="../images/captura4.png" alt="LaDescokada show en vivo">
+                <img src="../images/image00006.jpeg" alt="LaDescokada show en vivo">
             </div>
 
             <div class="galeria__img d3">
