acomodando errores de img

--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -81,11 +81,11 @@
             </div>
 
             <div class="galeria__img d7">
-                <img src="../images/nahudesko.png" alt="Nahuel nuestro cantante">
+                <img src="../images/nachodesko.png" alt="Nahuel nuestro cantante">
             </div>
 
             <div class="galeria__img d8">
-                <img src="../images/matidesko.png" alt="Matias nuestro timbaletero">
+                <img src="../images/matidesko.png" alt="Matias nuestro timbaleteroo">
             </div>
         </section>
 
