--- a/pages/integrantes.html
+++ b/pages/integrantes.html
@@ -61,7 +61,7 @@
 
         <section class="deskoo">
             <div class="desko">
-                <img src="../images/nahudesko.png" alt="cantante">
+                <img src="../images/nachodesko.png" alt="cantante">
                 <div class="desko__integrantes">
                     <h3> En La Voz</h3>
                     <p>NOMBRE: Nahuel Torena</p>
@@ -103,7 +103,7 @@
             </div>
     
             <div class="desko">
-                <img src="../images/nachodesko.png" alt="guitarrista">
+                <img src="../images/nachodesko2.png" alt="guitarrista">
                 <div class="desko__integrantes">
                     <h3> Guitarrista </h3>
                     <p>NOMBRE: Ignacio Caliva </p>
