cambiando el orden de mis card de integrantes para darle un meor estilo, agregando seo a mi proyecto con metatags, acomodando mis textos de torenamusic

--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -10,8 +10,20 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!--link a css -->
     <link rel="stylesheet" href="../css/style.css">
-    <title>Galeria/Descokada Cumbia</title>
-</head>
+
+    <!--link favicon-->
+    <link rel="shortcut icon" href="../images/favicoms.png" type="image/x-icon">
+    <!-- Primary Meta Tags -->
+    <title>Galeria/LaDescokada</title>
+    <meta name="title" content="Galeria/LaDescokada">
+    <meta name="description" content="imagenes de La Descokada sonando en vivo y de nuestro estudio de grabacion">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://simon7799.github.io/Descokada-SimonAbraham/">
+    <meta property="og:title" content="Galeria/LaDescokada">
+    <meta property="og:description" content="imagenes de La Descokada sonando en vivo y de nuestro estudio de grabacion">
+    <meta property="og:image" content="../images/captura7">
 <body>
 
     <header> 
