--- a/pages/torenamusic.html
+++ b/pages/torenamusic.html
@@ -10,7 +10,19 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!--link a css -->
     <link rel="stylesheet" href="../css/style.css">
-    <title>TorenaMusic</title>
+    <!--link favicon-->
+    <link rel="shortcut icon" href="../images/favicoms.png" type="image/x-icon">
+    <!-- Primary Meta Tags -->
+    <title>TorenaMusic/LaDescokada</title>
+    <meta name="title" content="TorenaMusic/LaDescokada">
+    <meta name="description" content="seccion dedicada a nuestro estudio de grabacion, donde grabamos temas propios como tambien de artistas nuevos que buscar una buena experiencia">
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://simon7799.github.io/Descokada-SimonAbraham/">
+    <meta property="og:title" content="La Descokada Cumbia">
+    <meta property="og:description" content="seccion dedicada a nuestro estudio de grabacion, donde grabamos temas propios como tambien de artistas nuevos que buscar una buena experiencia">
+    <meta property="og:image" content="../images/captura7">
 </head>
 <body>
 
