--- a/index.html
+++ b/index.html
@@ -10,7 +10,22 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!--link a css -->
     <link rel="stylesheet" href="css/style.css">
-    <title>Descokada Cumbia</title>
+
+    <!--link favicon-->
+    <link rel="shortcut icon" href="images/favicoms.png" type="image/x-icon">
+
+    <!-- Primary Meta Tags -->
+    <title>La Descokada Cumbia</title>
+    <meta name="title" content="La Descokada Cumbia">
+    <meta name="description" content="Somos una banda compuesta por 5 integrantes, creada en el 2014. Hacemos cumbia del estilo santafesina y colombiana. Somos de Brandsen una ciudad ubicada en la provincia de Buenos Aires, Argentina.">
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://simon7799.github.io/Descokada-SimonAbraham/">
+    <meta property="og:title" content="La Descokada Cumbia">
+    <meta property="og:description" content="Somos una banda compuesta por 5 integrantes, creada en el 2014. Hacemos cumbia del estilo santafesina y colombiana. Somos de Brandsen una ciudad ubicada en la provincia de Buenos Aires, Argentina.">
+    <meta property="og:image" content="images/captura7">
+
 </head>
 <body>
     <header>
