--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -10,7 +10,19 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!--link a css -->
     <link rel="stylesheet" href="../css/style.css">
-    <title>Contacto/Descokada Cumbia</title>
+    <!--link favicon-->
+    <link rel="shortcut icon" href="../images/favicoms.png" type="image/x-icon">
+    <!-- Primary Meta Tags -->
+    <title>Contacto/LaDescokada</title>
+    <meta name="title" content="Contacto/LaDescokada">
+    <meta name="description" content="dejamos este sitio para que puedan darnos opiniones y criticas constructivas para poder seguir mejorando, tambien les dejamos nuestras redes sociales para que puedan conocernos mejor ">
+        
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://simon7799.github.io/Descokada-SimonAbraham/">
+    <meta property="og:title" content="Contacto/LaDescokada">
+    <meta property="og:description" content="dejamos este sitio para que puedan darnos opiniones y criticas constructivas para poder seguir mejorando, tambien les dejamos nuestras redes sociales para que puedan conocernos mejor ">
+    <meta property="og:image" content="../images/captura7">
 </head>
 <body>
 
