--- a/pages/integrantes.html
+++ b/pages/integrantes.html
@@ -10,7 +10,20 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!--link a css -->
     <link rel="stylesheet" href="../css/style.css">
-    <title>Integrantes/Descokada cumbia</title>
+
+    <!--link favicon-->
+    <link rel="shortcut icon" href="../images/favicoms.png" type="image/x-icon">
+    <!-- Primary Meta Tags -->
+    <title>Integrantes/LaDescokada</title>
+    <meta name="title" content="Integrantes/LaDescokada">
+    <meta name="description" content="Presentamos a nusetros 5 integrantes, con algunos datos de cada uno y redes sociales para que puedan conocerlos mejor">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://simon7799.github.io/Descokada-SimonAbraham/">
+    <meta property="og:title" content="Integrantes/LaDescokada">
+    <meta property="og:description" content="Presentamos a nusetros 5 integrantes, con algunos datos de cada uno y redes sociales para que puedan conocerlos mejor">
+    <meta property="og:image" content="../images/captura7">
 </head>
 <body>
 
