agregue comentarios de identificacion ej: //galeria y modifique img jpeg por jpg

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </div>
 
             <div class="descokada">
-                <img src="images/image00006.jpeg" alt="LaDescokada en vivo">
+                <img src="images/captura8.png" alt="LaDescokada en vivo">
             </div>
 
         </article>
