--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -73,7 +73,7 @@
                 <img src="../images/estudio.jpg" alt="LaDescokada show en vivo">
             </div>
             <div class="galeria__img d2">
-                <img src="../images/image00006.jpeg" alt="LaDescokada show en vivo">
+                <img src="../images/estudio3.jpg" alt="LaDescokada show en vivo">
             </div>
 
             <div class="galeria__img d3">
