--- a/pages/torenamusic.html
+++ b/pages/torenamusic.html
@@ -20,7 +20,7 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://simon7799.github.io/Descokada-SimonAbraham/">
-    <meta property="og:title" content="La Descokada Cumbia">
+    <meta property="og:title" content="TorenaMusic/LaDescokada">
     <meta property="og:description" content="seccion dedicada a nuestro estudio de grabacion, donde grabamos temas propios como tambien de artistas nuevos que buscar una buena experiencia">
     <meta property="og:image" content="../images/captura7">
 </head>
