mejore el tamaño de mis imagenes

--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -85,9 +85,7 @@
             </div>
 
             <div class="galeria__img d5">
-                <img src="../images/estudio2.jpg" alt="Nuestro Estudio de grabacion">
-            </div>
-
+                <img src="../images/estudio2.jpg" alt="nuestro estudio">
             <div class="galeria__img d6">
                 <img src="../images/nachodesko2.png" alt="Nacho nuestro guitarrista">
             </div>
