tuve un error borre un div en mi galeria

--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -86,6 +86,8 @@
 
             <div class="galeria__img d5">
                 <img src="../images/estudio2.jpg" alt="nuestro estudio">
+            </div>>
+
             <div class="galeria__img d6">
                 <img src="../images/nachodesko2.png" alt="Nacho nuestro guitarrista">
             </div>
