acomodando mi galeria, coloque un > de mas

--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -72,6 +72,7 @@
             <div class="galeria__img d1">
                 <img src="../images/estudio.jpg" alt="LaDescokada show en vivo">
             </div>
+
             <div class="galeria__img d2">
                 <img src="../images/estudio3.jpg" alt="LaDescokada show en vivo">
             </div>
@@ -86,7 +87,7 @@
 
             <div class="galeria__img d5">
                 <img src="../images/estudio2.jpg" alt="nuestro estudio">
-            </div>>
+            </div>
 
             <div class="galeria__img d6">
                 <img src="../images/nachodesko2.png" alt="Nacho nuestro guitarrista">
