haciendo la correcion en los alt de mis imagenes

--- a/index.html
+++ b/index.html
@@ -70,15 +70,15 @@
 
         <article class="carousell">
             <div class="descokada">
-                <img src="images/captura6.jpg" alt="LaDescokada en vivo">
+                <img src="images/captura6.jpg" alt="LaDescokadaCumbia">
             </div>
 
             <div class="descokada">
-                <img src="images/captura7.jpg" alt="LaDescokada en vivo">
+                <img src="images/captura7.jpg" alt="LaDescokada show en vivo">
             </div>
 
             <div class="descokada">
-                <img src="images/captura8.png" alt="LaDescokada en vivo">
+                <img src="images/captura8.png" alt="show en vivo con nuestra gente">
             </div>
 
         </article>
@@ -86,7 +86,7 @@
         <section class="row justify-content-evenly m-4">
             <h2> NUESTROS INICIOS </h2>
             <div class="card col-md-4 m-4">
-                <img src="images/captura1.png" class="card-img-top" alt="laDescokada">
+                <img src="images/captura1.png" class="card-img-top" alt="show en vivo de la descokada">
                 <div class="card-body">
                 <p class="card-text">Somos una banda compuesta por 5 integrantes, creada en el 2014. Hacemos cumbia del estilo santafesina y colombiana. Somos de Brandsen una ciudad ubicada en la provincia de Buenos Aires, Argentina.</p>
                 </div>
