--- a/pages/torenamusic.html
+++ b/pages/torenamusic.html
@@ -75,15 +75,15 @@
 
         <article class="carousell">
             <div class="descokada">
-                <img src="../images/estudio.jpg" alt="LaDescokada en vivo">
+                <img src="../images/estudio.jpg" alt="nuestro estudio">
             </div>
 
             <div class="descokada">
-                <img src="../images/estudio2.jpg" alt="LaDescokada en vivo">
+                <img src="../images/estudio2.jpg" alt="set up del astudio">
             </div>
 
             <div class="descokada">
-                <img src="../images/estudio3.jpg" alt="LaDescokada en vivo">
+                <img src="../images/estudio3.jpg" alt="sector de grabacion">
             </div>
 
         </article>
